src/objects/Portal_Honeywell_ID__c/Portal_Honeywell_ID__c.object-meta.xml
<CustomObject>
    <label>Web Portal Honeywell ID</label>
    <nameField>
        <label>Portal Honeywell ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Portal Honeywell ID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>