src/objects/Portal_Honeywell_ID__c/fields/account_name__c.field-meta.xml
<CustomField>
    <fullName>account_name__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>