src/objects/Portal_Honeywell_ID__c/fields/Email_Sent_Counter__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Counter__c</fullName>
    <label>Email Sent Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>