src/objects/Portal_Honeywell_ID__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for INC000008940291</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>