src/objects/Portal_Honeywell_ID__c/fields/Primary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Address__c</fullName>
    <label>Primary Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>