src/objects/Portal_Honeywell_ID__c/fields/Primary_Honeywell_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Honeywell_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Honeywell ID</label>
    <type>Checkbox</type>
</CustomField>