src/objects/Portal_Honeywell_ID__c/fields/Revalidated_Date__c.field-meta.xml
<CustomField>
    <fullName>Revalidated_Date__c</fullName>
    <label>Revalidated Date</label>
    <type>Date</type>
</CustomField>